--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,6 @@
 PORT=<PORT>
+
+DATABASE_HOST=<DATABASE_HOST>
+DATABASE_USERNAME=<DATABASE_USERNAME>
+DATABASE_PASSWORD=<DATABASE_PASSWORD>
+DATABASE_NAME=<DATABASE_NAME>
