--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon --exec babel-node src/index.js"
+    "dev": "nodemon --exec babel-node src/index.js",
+    "dev:debug": "DEBUG=api:* yarn run dev",
+    "dev:debug-all": "DEBUG=* yarn run dev"
   },
   "dependencies": {
+    "debug": "^4.1.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "pg": "^8.0.3",
